# book

./: CMakeLists.txt  book.cpp  book.hpp  book1.cpp  book_example  database.cpp  database.hpp  main.cpp  menu.cpp  menu.hpp  persons.cpp  persons.hpp  trash
trashfiles/: CMakeLists.txt  trash.cpp
